[package]
name = "generator"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repr-c = { path = "../repr-c" }
c-layout-priv = { path = "../c-layout-priv" }
anyhow =  "1.0.38"
tempdir = "0.3.7"
pdb = { path = "../../pdb" }
serde = { version = "1.0.120", features = ["derive"] }
toml = "0.5.8"
rayon = "1.5.0"
