[package]
name = "c-layout"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-layout-impl = { path = "../impl" }
repr-c-impl = { path = "../../repr-c/impl" }
clap = "2"
cfg-if = "1.0.0"
anyhow = "1.0.38"
