[package]
name = "c-layout"
version = "0.1.0"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-layout-impl = { path = "../impl", version = "=0.1.0" }
repr-c-impl = { path = "../../repr-c/impl", version = "0.1.0" }
clap = "2"
cfg-if = "1.0.0"
anyhow = "1.0.38"
