[package]
name = "cly-impl"
version = "0.1.1"
authors = ["Julian Orth <ju.orth@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/mahkoh/repr-c"
description = "An internal dependency of the cly crate"

[dependencies]
repc-impl = { path = "../../repc/impl", version = "0.1.1" }
anyhow = "1.0.38"

[dev-dependencies]
rayon = "1.5.0"
isnt = "0.1.0"
